chore: stop GitHub action due to not working

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,8 +1,8 @@
 name: Check Arch News
 on:
-  schedule:
-    # At minute 30 past every 6th hour.
-    - cron: "30 */6 * * *"
+  # schedule:
+  #   # At minute 30 past every 6th hour.
+  #   - cron: "30 */6 * * *"
   workflow_dispatch:
 
 jobs:
